# dev_scripts

./: .dev_scripts_config.yml.example  .gitignore  README.md  dev_scripts_cli.py  dev_scripts_ms_download.py  pyproject.toml
scripts/: __init__.py  cli.py  config_wizard.py
scripts/download/: ms_downloader.py
